# fltk-decl

./: Cargo.toml  README.md  fltk-schema.json
examples/: README.md  basic.rs  counter.rs  counter_all.rs  counter_json.rs  gui.json  gui.json5  gui.scm  gui.toml  gui.xml  gui.yaml  inline.rs  json.rs  json5.rs  menu.json  menu.rs  toml.rs  xml.rs
schemas/: fltk-schema.json  fltk-schema.xsd  fltk-schema.yaml
src/: frames.rs  lib.rs  utils.rs
