[package]
name = "fltk-decl"
version = "0.1.4"
authors = ["MoAlyousef <mohammed.alyousef@neurosrg.com>"]
edition = "2021"
description = "Describe your fltk-rs app declaratively, supports hot-reloading!"
repository = "https://github.com/MoAlyousef/fltk-decl"
documentation = "https://docs.rs/fltk-decl"
keywords = ["gui", "ui", "widgets", "bindings", "graphics"]
categories = ["gui"]
readme = "README.md"
license = "MIT"

[dependencies]
fltk = "1.3.30"
serde = "1"
serde_derive = "1"
serde_json5 = "0.1"
serde-xml-rs = "0.6"
toml = "0.7"
notify = "5.1"
