[package]
name = "fltk-decl"
version = "0.2.1"
authors = ["MoAlyousef <mohammed.alyousef@neurosrg.com>"]
edition = "2021"
description = "Describe your fltk-rs app declaratively, supports hot-reloading!"
repository = "https://github.com/MoAlyousef/fltk-decl"
documentation = "https://docs.rs/fltk-decl"
keywords = ["gui", "ui", "widgets", "bindings", "graphics"]
categories = ["gui"]
readme = "README.md"
license = "MIT"

[dependencies]
fltk = "1.3.32"
serde = "1"
serde_derive = "1"
notify = "5.1"
serde_json = { version = "1", optional = true }
serde_json5 = { version = "0.1", optional = true }
serde-xml-rs = { version = "0.6", optional = true }
serde_yaml = { version = "0.9", optional = true }

[features]
default = []
json = ["dep:serde_json"]
json5 = ["dep:serde_json5"]
yaml = ["dep:serde_yaml"]
xml = ["dep:serde-xml-rs"]

[dev-dependencies]
serde_json5 = "0.1"
serde-xml-rs = "0.6"
serde_yaml = "0.9"
toml = "0.7"
serde-lexpr = "0.1.2"
